--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-input-mask": "^2.0.4",
-    "react-scripts": "3.3.0"
+    "react-number-format": "^4.3.1",
+    "react-scripts": "3.3.0",
+    "semantic-ui-css": "^2.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
