--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^16.12.0",
     "react-number-format": "^4.3.1",
     "react-scripts": "3.3.0",
-    "semantic-ui-css": "^2.4.1"
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.2"
   },
   "scripts": {
     "start": "react-scripts start",
