--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.1",
+    "emailjs-com": "^2.4.1",
+    "json-loader": "^0.5.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-number-format": "^4.3.1",
