--- a/src/configuration_default.json
+++ b/src/configuration_default.json
@@ -1,7 +1,16 @@
+/*
+Для передачи почтового сообщения используется сервис https://www.emailjs.com/
+Необходимо заполнить поля для корректной работы:
+*/
 {
+  //Заполняется атрубут с видом сервиса
   "SERVICE_ID": "gmail",
+  //Заполняется email отправителя
   "RECIPIENT": "",
+  //Заполняется адрес
   "ADDRESS": "",
+  //Заполняется идентификатор шаблона https://www.emailjs.com/
   "TEMPLATE_ID": "",
+  //Заполняется идентификатор пользователя https://www.emailjs.com/
   "USER_ID": ""
 }
