--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://averholantsev.github.io/indicators_transfer",
   "name": "indicators_transfer",
   "version": "0.1.0",
   "private": true,
@@ -27,7 +28,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "scripts": {
+      "predeploy": "npm run build",
+      "deploy": "gh-pages -d build"
+    }
   },
   "eslintConfig": {
     "extends": "react-app"
