--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.1",
     "emailjs-com": "^2.4.1",
+    "history": "^4.10.1",
     "json-loader": "^0.5.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
