--- a/package.json
+++ b/package.json
@@ -4,22 +4,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.9.13",
+    "@date-io/date-fns": "^1.3.13",
+    "@material-ui/core": "^4.9.14",
     "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.52",
+    "@material-ui/lab": "^4.0.0-alpha.53",
+    "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
+    "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.19.1",
+    "@unicef/material-ui-currency-textfield": "^0.8.6",
+    "axios": "^0.19.2",
+    "date-fns": "^2.14.0",
     "emailjs-com": "^2.4.1",
     "history": "^4.10.1",
     "json-loader": "^0.5.7",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-number-format": "^4.3.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-number-format": "^4.4.1",
     "react-redux": "^7.2.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
