--- a/package.json
+++ b/package.json
@@ -20,14 +20,12 @@
     "json-loader": "^0.5.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-number-format": "^4.4.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.88.2"
+    "semantic-ui-css": "^2.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
