--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "emailjs-com": "^2.4.1",
     "history": "^4.10.1",
     "json-loader": "^0.5.7",
+    "notistack": "^0.9.16",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
