delete some packages

--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "axios": "^0.19.2",
     "date-fns": "^2.14.0",
     "emailjs-com": "^2.4.1",
-    "history": "^4.10.1",
     "json-loader": "^0.5.7",
     "notistack": "^0.9.16",
     "react": "^16.13.1",
@@ -25,8 +24,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "semantic-ui-css": "^2.4.1"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
